...
    }

    override func viewDidLoad() {
        super.viewDidLoad()
        tableView.addGestureRecognizer(longPressRecognizer)

        self.tableView.accessibilityIdentifier = "Bookmarks List"
        
        self.refreshControl = UIRefreshControl()
        self.tableView.addSubview(refreshControl!)
    }

    override func viewWillAppear(_ animated: Bool) {
...
